2010-05-20  Zhenyao Mo  <zmo@google.com>

        Reviewed by Dimitri Glazkov.

        Map RGBA4/RGB5_A1 to RGBA and RGB565 to RGB in RenderbufferStorage
        https://bugs.webkit.org/show_bug.cgi?id=39077

        * fast/canvas/webgl/framebuffer-object-attachment-expected.txt: Add the test cases for color renderbuffer creation and attachment to framebuffer.
        * fast/canvas/webgl/framebuffer-object-attachment.html: Ditto.

2010-05-20  Dan Bernstein  <mitz@apple.com>

        Reviewed by Dave Hyatt.

        <rdar://problem/8007953> Textarea using custom font appears blank

        * fast/css/font-face-in-shadow-DOM.html: Added.
        * platform/mac/fast/css/font-face-in-shadow-DOM-expected.checksum: Added.
        * platform/mac/fast/css/font-face-in-shadow-DOM-expected.png: Added.
        * platform/mac/fast/css/font-face-in-shadow-DOM-expected.txt: Added.

2010-05-20  Martin Robinson  <mrobinson@igalia.com>

        Not reviewed.

        Tests that use Geolocation.getCurrentPosition fail
        https://bugs.webkit.org/show_bug.cgi?id=39454

        * platform/gtk/Skipped: Skip failing tests until this bug is resolved.

2010-05-20  Victor Wang  <victorw@chromium.org>

        Unreviewed. Update test expectations for chromium.

        * platform/chromium-mac/svg/filters/feLighting-crash-expected.checksum: Added.
        * platform/chromium-mac/svg/filters/feLighting-crash-expected.png: Added.
        * platform/chromium-win/svg/filters/feLighting-crash-expected.checksum: Added.
        * platform/chromium-win/svg/filters/feLighting-crash-expected.png: Added.
        * platform/chromium/test_expectations.txt:

2010-05-20  Justin Schuh  <jschuh@chromium.org>

        Reviewed by Adam Barth.

        Moving frame.src checks out of the bindings
        https://bugs.webkit.org/show_bug.cgi?id=37815

        * http/tests/security/xss-DENIED-iframe-src-alias-expected.txt:
        * http/tests/security/xss-DENIED-iframe-src-alias.html:
